WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289479
[ wk2 Release ] imported/w3c/web-platform-tests/html/semantics/embedded-content/the-iframe-element/iframe-loading-lazy-multiple-queued-navigations.html is a flaky failure.
https://bugs.webkit.org/show_bug.cgi?id=289479
Summary
[ wk2 Release ] imported/w3c/web-platform-tests/html/semantics/embedded-conte...
Yasmin Karimi
Reported
2025-03-10 11:35:15 PDT
imported/w3c/web-platform-tests/html/semantics/embedded-content/the-iframe-element/iframe-loading-lazy-multiple-queued-navigations.html This test is flakily failing on wk2 Release. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fembedded-content%2Fthe-iframe-element%2Fiframe-loading-lazy-multiple-queued-navigations.html
TEXT DIFF: @@ -1,4 +1,4 @@ -FAIL Multiple queued lazy load navigations do not crash the page assert_true: The iframe should be navigated to the resource provided by the latest `src` mutation expected true got false +PASS Multiple queued lazy load navigations do not crash the page DIFF URL:
https://build.webkit.org/results/Apple-Sequoia-Release-WK2-Tests/291893@main%20(1885)/imported/w3c/web-platform-tests/html/semantics/embedded-content/the-iframe-element/iframe-loading-lazy-multiple-queued-navigations-pretty-diff.html
REPRODUCIBILITY: I was able to reproduce this failure on MacOS Sequoia 15.3.1 (24D70 / arm64) at ToT with the following command: run-webkit-tests imported/w3c/web-platform-tests/html/semantics/embedded-content/the-iframe-element/iframe-loading-lazy-multiple-queued-navigations.html --release --iterations 10
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-10 11:35:31 PDT
<
rdar://problem/146675979
>
EWS
Comment 2
2025-03-10 11:51:20 PDT
Test gardening commit
291904@main
(150900b9a28c): <
https://commits.webkit.org/291904@main
> Reviewed commits have been landed. Closing PR #42201 and removing active labels.
Ryosuke Niwa
Comment 3
2025-03-19 22:24:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42732
EWS
Comment 4
2025-03-20 15:03:43 PDT
Committed
292445@main
(02abcb409e5c): <
https://commits.webkit.org/292445@main
> Reviewed commits have been landed. Closing PR #42732 and removing active labels.
Ryosuke Niwa
Comment 5
2025-03-21 13:06:23 PDT
The test appears to be no longer flaky.
Ryosuke Niwa
Comment 6
2025-03-21 13:13:08 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/42835
EWS
Comment 7
2025-03-21 13:17:46 PDT
Committed
292502@main
(cd531f1c7fd2): <
https://commits.webkit.org/292502@main
> Reviewed commits have been landed. Closing PR #42835 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug