[ wk2 Release ] imported/w3c/web-platform-tests/html/semantics/embedded-content/the-iframe-element/iframe-loading-lazy-multiple-queued-navigations.html is a flaky failure. https://bugs.webkit.org/show_bug.cgi?id=289479 rdar://146675979

Reviewed by Per Arne Vollan.

The flakiness was caused by frameURL in LazyLoadFrameObserver getting out of sync with url set in HTMLIframeElement's src attribute in most cases but not always.

Fixed the flakiness by always updating LazyLoadFrameObserver's url and referrer policy in HTMLIFrameElement::shouldLoadFrameLazily() regardless of whether
m_lazyLoadFrameObserver already exists or not.

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/embedded-content/the-iframe-element/iframe-loading-lazy-multiple-queued-navigations-expected.txt:
* Source/WebCore/html/HTMLIFrameElement.cpp:
(WebCore::HTMLIFrameElement::referrerPolicy const):
(WebCore::HTMLIFrameElement::referrerPolicyFromAttribute const): Extracted from referrerPolicy.
(WebCore::HTMLIFrameElement::shouldLoadFrameLazily):
* Source/WebCore/html/HTMLIFrameElement.h:
* Source/WebCore/html/LazyLoadFrameObserver.cpp:
(WebCore::LazyLoadFrameObserver::update): Added.
* Source/WebCore/html/LazyLoadFrameObserver.h:

Canonical link: https://commits.webkit.org/292445@main